--- a/ukol-3/style.css
+++ b/ukol-3/style.css
@@ -6,13 +6,24 @@ h1 {
     line-height: normal;
 }
 
+h2 {
+    font-size: 1.5rem;
+    font-family: 'Mansalva', cursive;
+    font-style: italic;
+    color: #c51499;
+    line-height: normal;
+}
+
+body {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 p {
     font-size: 1rem;
-    font-family: Arial, Helvetica, sans-serif;
     line-height: inherit;
 }
 
-P:first-letter {
+p:first-letter {
     line-height: 0.8;
     font-size: 2rem;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
@@ -33,11 +44,16 @@ a:hover {
     background: #c51499;
 }
 
-footer {
+.main-footer {
     background: #d46ebb;
 
 }
 
-footer li {
+.main-footer li {
     list-style-type: none;
+}
+
+.base-section {
+    margin-bottom: 30px;
+    margin-top: 30px;
 }
