--- a/ukol-4.1/style.css
+++ b/ukol-4.1/style.css
@@ -26,7 +26,7 @@ body {
 }
 
 .logo {
-    border-radius: 25px;
+    border-radius: 50%;
     background: #ffa6dc;
     position: absolute;
     top: 150px;
@@ -37,7 +37,7 @@ body {
 .jmeno {
     font-family: 'Montserrat', sans-serif;
     color: white;
-    font-size: 20px;
+    font-size: 1rem;
     margin: 20px 20px 20px 20px;
 }
 
@@ -46,8 +46,8 @@ body {
 p {
     color: white;
     font-family: 'Source Sans Pro', sans-serif;
-    font-size: 16px;
-    margin: 20px 20px 20px 20px;
+    font-size: 0.75rem;
+    margin: 20px;
 }
 
 .odkazy {
@@ -59,7 +59,7 @@ p {
 
 /* buttons*/
 
-ul .portfolio {
+.portfolio {
     display: inline-block;
     width: 100%;
     outline: none;
@@ -70,13 +70,13 @@ ul .portfolio {
 
 }
 
-ul .facebook,
-ul .twitter {
+.facebook,
+.twitter {
     background-color: #800655;
     display: inline-block;
     width: 50%;
     margin: 0px;
-    border: 1px solid  rgba(255, 255, 255, 0.411);
+    border: 1px solid rgba(255, 255, 255, 0.411);
     cursor: pointer;
     padding: 15px 15px;
     text-align: center;
@@ -86,7 +86,7 @@ ul .twitter {
 .odkazy a {
     text-decoration: none;
     color: white;
-    font-size: 14px;
+    font-size: 0.7rem;
     text-transform: uppercase;
     text-align: center;
     font-family: 'Montserrat', sans-serif;
